# GHOSTESCAPE

./: CMakeLists.txt
SDL3/lib/cmake/SDL3_mixer/: SDL3_mixer-shared-targets-debug.cmake  SDL3_mixer-shared-targets.cmake  SDL3_mixerConfig.cmake
src/: actor.h  asset_store.cpp  asset_store.h  defs.h  game.cpp  game.h  main.cpp  object.cpp  object.h  object_affiliate.h  object_screen.h  object_world.cpp  object_world.h  player.cpp  player.h  scene.cpp  scene.h  scene_main.cpp  scene_main.h
src/affiliate/: sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h
